# mcp-scan

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  issues-mcp-scan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
mcp_audit/: __init__.py  __main__.py  cli.py  discovery.py  parsers.py  report.py
mcp_audit/rules/: __init__.py  base.py  broad_access.py  static_credentials.py  suspicious_patterns.py
mcp_config_audit/: __init__.py  __main__.py  cli.py  credentials.py  discovery.py  parsers.py  report.py
mcp_config_audit/rules/: __init__.py  base.py  broad_access.py  static_credentials.py  suspicious_patterns.py
mcp_scan/: __init__.py  __main__.py  cli.py  credentials.py  discovery.py  parsers.py  report.py
mcp_scan/rules/: __init__.py  base.py  broad_access.py  static_credentials.py  suspicious_patterns.py
tests/: conftest.py  test_broad_access.py  test_cli.py  test_credentials.py  test_discovery.py  test_docs.py  test_parsers.py  test_report.py  test_rules.py  test_static_credentials.py  test_suspicious_patterns.py
tests/fixtures/: broad_access_config.json  claude_code_config.json  claude_code_project_config.json  credentials_config.json  cursor_config.json  cursor_project_config.json  malformed_config.json  markup_config.json  sample_config.json  suspicious_config.json  vscode_config.json  vscode_project_config.json  windsurf_config.json
