[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-config-audit"
version = "0.1.0"
description = "Local-first security scanner for MCP (Model Context Protocol) configurations. No account, no telemetry, no network calls."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "nyakojiru", email = "llorens.p@proton.me" }]
keywords = ["mcp", "security", "scanner", "audit", "claude", "cursor", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/jiru-labs/mcp-config-audit"
Source = "https://github.com/jiru-labs/mcp-config-audit"
Issues = "https://github.com/jiru-labs/mcp-config-audit/issues"
Security = "https://github.com/jiru-labs/mcp-config-audit/blob/main/SECURITY.md"

[project.scripts]
mcp-config-audit = "mcp_config_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mcp_config_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
